- prevents button labels from wrapping

--- a/packages/odyssey/src/scss/components/_button.scss
+++ b/packages/odyssey/src/scss/components/_button.scss
@@ -29,6 +29,7 @@
   font-size: ms(0);
   font-weight: 600;
   line-height: $base-line-height;
+  white-space: nowrap;
 
   &:hover,
   &.is-ods-button-hover {
